# lib-version

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: feature_bump.yml  release.yml
lib-version/: version_awareness.py
src/lib_version/: VERSION  version_awareness.py
